--- a/views/main/login.html
+++ b/views/main/login.html
@@ -31,21 +31,7 @@
     </div>
     <?php include('./views/common/script.html'); ?>
     <script type="text/javascript">
-        $('#loginBtn').click(function () {
-            $.ajax({
-                type:'post',
-                url:'/api/login',
-                data:$('#loginForm').serialize(),
-                dataType:'json',
-                success : function (data) {
-                    if (data.code == 200){
-                        location.href = '/main/index';
-                    }
-                }
-            })
-//            console.log(123);
-            return false;
-        });
+        require(['login']);
 
     </script>
 </body>
