--- a/views/teacher/list.html
+++ b/views/teacher/list.html
@@ -9,16 +9,17 @@
     
     <!-- 侧边栏 -->
     <div class="aside">
-        <!-- 个人资料 -->
-        <div class="profile">
-            <!-- 头像 -->
-            <div class="avatar img-circle">
-                <img src="./uploads/avatar.jpg">
-            </div>
-            <h4>布头儿</h4>
-        </div>
-        <!-- 导航菜单 -->
         <?php include('./views/common/aside.html'); ?>
+        <!-- 个人资料 -->
+        <!--<div class="profile">-->
+            <!--&lt;!&ndash; 头像 &ndash;&gt;-->
+            <!--<div class="avatar img-circle">-->
+                <!--<img src="./uploads/avatar.jpg">-->
+            <!--</div>-->
+            <!--<h4>布头儿</h4>-->
+        <!--</div>-->
+        <!-- 导航菜单 -->
+
     </div>
     <!-- 主体 -->
     <div class="main">
@@ -34,7 +35,7 @@
                 </ol>
                 <div class="page-title">
                     <a href="/teacher/add" class="btn btn-success btn-sm pull-right">添加讲师</a>
-                </div>f
+                </div>
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <form action="" class="form-inline">
