--- a/views/teacher/add.html
+++ b/views/teacher/add.html
@@ -9,14 +9,6 @@
     
     <!-- 侧边栏 -->
     <div class="aside">
-        <!-- 个人资料 -->
-        <div class="profile">
-            <!-- 头像 -->
-            <div class="avatar img-circle">
-                <img src="./uploads/avatar.jpg">
-            </div>
-            <h4>布头儿</h4>
-        </div>
         <!-- 导航菜单 -->
         <?php include('./views/common/aside.html'); ?>
     </div>
@@ -82,5 +74,8 @@
         </div>
     </div>
     <?php include('./views/common/script.html'); ?>
+    <script type="text/javascript">
+        require(['teacheradd']);
+    </script>
 </body>
 </html>
