--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -115,7 +115,7 @@
     </div>
     <?php include('./views/common/script.html');  ?>
     <script type="text/javascript">
-        require(['setting']);
+        require(['settings']);
     </script>
 </body>
 </html>
