--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>学IT - 后台管理系统</title>
     <?php include('./views/common/style.html');  ?>
+    <link rel="stylesheet" type="text/css" href="/public/assets/bootstrap-datepicker/css/bootstrap-datepicker.css">
 </head>
 <body>
     <!-- 侧边栏 -->
@@ -24,15 +25,16 @@
         </div>
     </div>
     <script type="text/template" id="settingsTpl">
-        <form action="" class="form-horizontal">
+        <form id="settingForm" class="form-horizontal">
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">姓名</label>
+                <input type="hidden" name="tc_id" value="{{tc_id}}">
+                <label  class="col-xs-3 control-label">姓名</label>
                 <div class="col-xs-5">
                     <p class="form-control-static">{{tc_name}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">头像</label>
+                <label  class="col-xs-3 control-label">头像</label>
                 <div class="col-xs-2 preview">
                     {{if tc_avatar}}
                         <img src="{{tc_avatar}}">
@@ -41,74 +43,68 @@
                     {{/if}}
                     <input type="file" id="upfile">
                     <div class="cover">
-                        <i class="fa fa-upload"></i>
+                        <i class="fa fa-upload">U p</i>
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">昵称</label>
+                <label  class="col-xs-3 control-label">昵称</label>
                 <div class="col-xs-5">
                     <input type="text" name="tc_roster" value="{{tc_roster}}" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">性别</label>
+                <label  class="col-xs-3 control-label">性别</label>
                 <div class="col-xs-3">
                     <label class="radio-inline">
-                        <input type="radio" value="1" {{if tc_gender==1}}checked{{/if}}> 男
+                        <input name="tc_gender" type="radio" value="1" {{if tc_gender==1}}checked{{/if}}> 男
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" value="0" {{if tc_gender==0}}checked{{/if}}> 女
+                        <input name="tc_gender" type="radio" value="0" {{if tc_gender==0}}checked{{/if}}> 女
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <label for=""  class="col-xs-3 control-label">出生日期</label>
+                <label   class="col-xs-3 control-label">出生日期</label>
                 <div class="col-xs-5">
-                    <input type="text" name="tc_birthday" value="{{tc_birthday}}" class="form-control input-sm">
+                    <input data-provide="datepicker" data-date-language="zh-CN" data-date-format="yyyy-mm-dd"  type="text" name="tc_birthday" value="{{tc_birthday}}" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">籍贯</label>
-                <div class="col-xs-5">
-                    <select name="" class="form-control input-sm">
-                        <option value="">河北省</option>
-                        <option value="">山东省</option>
-                        <option value="">北京市</option>
+                <label  class="col-xs-3 control-label">籍贯</label>
+                <div class="col-xs-5" id="pcd">
+                    <select name="tc_province" id="p" data-id="{{tc_province}}" class="form-control input-sm">
+                        <option value="0">请选择省...</option>
                     </select>
-                    <select name="" class="form-control input-sm">
-                        <option value="">河北省</option>
-                        <option value="">山东省</option>
-                        <option value="">北京市</option>
+                    <select name="tc_city" id="c" data-id="{{tc_city}}" class="form-control input-sm">
+                        <option value="0">请选择市...</option>
                     </select>
-                    <select name="" class="form-control input-sm">
-                        <option value="">河北省</option>
-                        <option value="">山东省</option>
-                        <option value="">北京市</option>
+                    <select name="tc_district" id="d" data-id="{{tc_district}}" class="form-control input-sm">
+                        <option value="0">请选择县...</option>
                     </select>
                 </div>
             </div>
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">手机号码</label>
+                <label  class="col-xs-3 control-label">手机号码</label>
                 <div class="col-xs-5">
                     <input type="text" name="tc_cellphone" value="{{tc_cellphone}}" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label for=""   class="col-xs-3 control-label">电子邮箱</label>
+                <label class="col-xs-3 control-label">电子邮箱</label>
                 <div class="col-xs-5">
                     <input type="text" value="{{tc_email}}" name="
                     tc_email" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">入职日期</label>
+                <label class="col-xs-3 control-label">入职日期</label>
                 <div class="col-xs-5">
-                    <input type="text" value="{{tc_join_date}}" name="tc_join_date" class="form-control input-sm">
+                    <input data-provide="datepicker" data-date-language="zh-CN" data-date-format="yyyy-mm-dd" type="text" value="{{tc_join_date}}" name="tc_join_date" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label for="" class="col-xs-3 control-label">个人介绍</label>
+                <label  class="col-xs-3 control-label">个人介绍</label>
                 <div class="col-xs-5 ckeditor">
                     <textarea name="tc_introduce" rows="15" class="form-control input-sm">{{tc_introduce}}</textarea>
                 </div>
