--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -28,13 +28,13 @@
         <form id="settingForm" class="form-horizontal">
             <div class="form-group">
                 <input type="hidden" name="tc_id" value="{{tc_id}}">
-                <label  class="col-xs-3 control-label">姓名</label>
+                <label for="" class="col-xs-3 control-label">姓名</label>
                 <div class="col-xs-5">
                     <p class="form-control-static">{{tc_name}}</p>
                 </div>
             </div>
             <div class="form-group">
-                <label  class="col-xs-3 control-label">头像</label>
+                <label for=""  class="col-xs-3 control-label">头像</label>
                 <div class="col-xs-2 preview">
                     {{if tc_avatar}}
                         <img src="{{tc_avatar}}">
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label  class="col-xs-3 control-label">昵称</label>
+                <label for="" class="col-xs-3 control-label">昵称</label>
                 <div class="col-xs-5">
                     <input type="text" name="tc_roster" value="{{tc_roster}}" class="form-control input-sm">
                 </div>
@@ -56,22 +56,22 @@
             <div class="form-group">
                 <label  class="col-xs-3 control-label">性别</label>
                 <div class="col-xs-3">
-                    <label class="radio-inline">
+                    <label for=""  class="radio-inline">
                         <input name="tc_gender" type="radio" value="1" {{if tc_gender==1}}checked{{/if}}> 男
                     </label>
-                    <label class="radio-inline">
+                    <label for=""  class="radio-inline">
                         <input name="tc_gender" type="radio" value="0" {{if tc_gender==0}}checked{{/if}}> 女
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <label   class="col-xs-3 control-label">出生日期</label>
+                <label  for=""  class="col-xs-3 control-label">出生日期</label>
                 <div class="col-xs-5">
                     <input data-provide="datepicker" data-date-language="zh-CN" data-date-format="yyyy-mm-dd"  type="text" name="tc_birthday" value="{{tc_birthday}}" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label  class="col-xs-3 control-label">籍贯</label>
+                <label for=""  class="col-xs-3 control-label">籍贯</label>
                 <div class="col-xs-5" id="pcd">
                     <select name="tc_province" id="p" data-id="{{tc_province}}" class="form-control input-sm">
                         <option value="0">请选择省...</option>
@@ -85,28 +85,29 @@
                 </div>
             </div>
             <div class="form-group">
-                <label  class="col-xs-3 control-label">手机号码</label>
+                <label for=""  class="col-xs-3 control-label">手机号码</label>
                 <div class="col-xs-5">
                     <input type="text" name="tc_cellphone" value="{{tc_cellphone}}" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-xs-3 control-label">电子邮箱</label>
+                <label for=""  class="col-xs-3 control-label">电子邮箱</label>
                 <div class="col-xs-5">
-                    <input type="text" value="{{tc_email}}" name="
-                    tc_email" class="form-control input-sm">
+                    <input type="text" value="{{tc_email}}" name="tc_email" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-xs-3 control-label">入职日期</label>
+                <label for=""  class="col-xs-3 control-label">入职日期</label>
                 <div class="col-xs-5">
                     <input data-provide="datepicker" data-date-language="zh-CN" data-date-format="yyyy-mm-dd" type="text" value="{{tc_join_date}}" name="tc_join_date" class="form-control input-sm">
                 </div>
             </div>
             <div class="form-group">
-                <label  class="col-xs-3 control-label">个人介绍</label>
+                <label for=""  class="col-xs-3 control-label">个人介绍</label>
                 <div class="col-xs-5 ckeditor">
-                    <textarea id="editor" name="tc_introduce" rows="15" class="form-control input-sm">{{tc_introduce}}</textarea>
+                    <textarea id="editor" name="tc_introduce" rows="15" class="form-control input-sm">
+                        {{tc_introduce}}
+                    </textarea>
                 </div>
             </div>
             <div class="form-group">
