--- a/views/course/basic.html
+++ b/views/course/basic.html
@@ -67,7 +67,7 @@
                 <div class="title">
                     <h5>基本信息 <small>BASIC INFORMATION</small></h5>
                 </div>
-                <form action="" class="basic form-horizontal">
+                <form id="basicForm" class="basic form-horizontal">
                     <div class="form-group">
                         <label for="" class="col-xs-2 control-label">标题</label>
                         <div class="col-xs-8">
@@ -94,7 +94,7 @@
                     <div class="form-group">
                         <label for="" class="col-xs-2 control-label">分类</label>
                         <div class="col-xs-8">
-                            <select id="firstType" name="" class="form-control input-sm">
+                            <select id="firstType" class="form-control input-sm">
                                 <option value="0">请选择一级分类...</option>
                                 {{if category}}
                                 {{each category.top}}
@@ -102,7 +102,7 @@
                                 {{/each}}
                                 {{/if}}
                             </select>
-                            <select id="secondType" name="" class="form-control input-sm">
+                            <select id="secondType" name="cs_cg_id" class="form-control input-sm">
                                 <option value="0">请选择二级分类...</option>
                                 {{if category}}
                                 {{each category.childs}}
@@ -122,7 +122,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-xs-10">
-                            <a href="./course_add_step2.html" class="btn btn-success btn-sm pull-right">保 存</a>
+                            <input type="submit" value="保 存" class="btn btn-success btn-sm pull-right" >
                         </div>
                     </div>
                 </form>
