--- a/views/course/basic.html
+++ b/views/course/basic.html
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/course/picturn?cs_id={{cs_id}}">
+                    <a href="/course/picture?cs_id={{cs_id}}">
                         <b>2</b>
                         课程图片
                     </a>
