--- a/views/course/picture.html
+++ b/views/course/picture.html
@@ -90,7 +90,7 @@
         </div>
     </script>
     <?php include('./views/common/script.html');  ?>
-    <script>
+    <script type="text/javascript">
         require(['coursepicture']);
     </script>
 </body>
