--- a/views/main/settings.html
+++ b/views/main/settings.html
@@ -112,7 +112,7 @@
             </div>
             <div class="form-group">
                 <div class="col-xs-8">
-                    <input type="submit" value="保 存" class="btn btn-success btn-sm pull-right">
+                    <input type="submit" value="保 存" class="btn btn-success btn-sm pull-right" value="保存">
                     <a href="./repass.html" class="btn btn-link btn-sm pull-right">更改密码？</a>
                 </div>
             </div>
